--- a/index.html
+++ b/index.html
@@ -1,7 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <header>
+        <h1>My Portfolio</h1>
+        <p>Welcome to my professional portfolio!</p>
+    </header>
+
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Brief description about yourself, your skills, and your interests.</p>
+    </section>
+
+    <section id="projects">
+        <h2>Projects</h2>
+        <div class="project">
+            <h3>Project Name</h3>
+            <p>Description of the project. What did you do? What technologies did you use?</p>
+            <a href="https://github.com/username/project-repo" target="_blank">View on GitHub</a>
+        </div>
+        <!-- Repeat for more projects -->
+    </section>
+
+    <footer>
+        <p>&copy; 2024 My Portfolio. All rights reserved.</p>
+        <p><a href="https://github.com/username" target="_blank">GitHub</a> | <a href="mailto:email@example.com">Contact</a></p>
+    </footer>
 </body>
 </html>
