--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe - Android Developer</title>
+    <title>Habibur Rahman - Android Developer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -32,15 +32,15 @@
         <section id="projects">
             <h2>Projects</h2>
             <div class="project">
-                <h3>FitTrack</h3>
+                <h3>Single Radio</h3>
                 <p>A fitness tracking app that uses GPS and machine learning to provide personalized workout plans.</p>
             </div>
             <div class="project">
-                <h3>EcoScan</h3>
+                <h3>DocScan</h3>
                 <p>An app that helps users identify eco-friendly products by scanning barcodes and providing sustainability information.</p>
             </div>
             <div class="project">
-                <h3>MindfulMinutes</h3>
+                <h3>OfficeAttendaceApp</h3>
                 <p>A meditation and mindfulness app featuring guided sessions and progress tracking.</p>
             </div>
         </section>
@@ -48,7 +48,6 @@
         <section id="skills">
             <h2>Skills</h2>
             <div class="skills">
-                <span class="skill">Java</span>
                 <span class="skill">Kotlin</span>
                 <span class="skill">Android SDK</span>
                 <span class="skill">MVVM</span>
@@ -62,15 +61,14 @@
 
         <section id="contact">
             <h2>Contact</h2>
-            <p>Email: john.doe@example.com</p>
-            <p>LinkedIn: linkedin.com/in/johndoe</p>
-            <p>GitHub: github.com/johndoe</p>
+            <p>Email: rhabibp@gmail.com</p>
+            <p>GitHub: github.com/rhabibp</p>
         </section>
     </main>
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 John Doe. All rights reserved.</p>
+            <p>&copy; 2024 Habib. All rights reserved.</p>
         </div>
     </footer>
 </body>
