--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>John Doe</h1>
+            <h1>Habibur Rahman</h1>
             <p>Android Developer</p>
         </div>
     </header>
