--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="container">
             <h1>Habibur Rahman</h1>
-            <p>Android Developer</p>
+            <p class="subtitle">Android Developer</p>
         </div>
     </header>
 
@@ -61,14 +61,14 @@
 
         <section id="contact">
             <h2>Contact</h2>
-            <p>Email: rhabibp@gmail.com</p>
-            <p>GitHub: github.com/rhabibp</p>
+            <p>Email: <a href="mailto:rhabibp@gmail.com">rhabibp@gmail.com</a></p>
+            <p>GitHub: <a href="https://github.com/rhabibp" target="_blank">github.com/rhabibp</a></p>
         </section>
     </main>
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Habib. All rights reserved.</p>
+            <p>&copy; 2024 Habibur Rahman. All rights reserved.</p>
         </div>
     </footer>
 </body>
