--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 </head>
 <body class="bg-gray-900 text-white">
 
-    <!-- Hero Section -->
-    <section class="min-h-screen flex flex-col justify-center items-center text-center bg-gray-800 p-6">
-        <img src="https://placehold.co/150x150" alt="Professional headshot of the developer" class="rounded-full mb-6">
-        <h1 class="text-4xl md:text-6xl font-bold mb-4">Crafting Elegant Android Experiences with Kotlin and Jetpack Compose</h1>
-        <button class="mt-4 px-6 py-3 bg-blue-500 text-white rounded-full hover:bg-blue-600 transition duration-300">View My Work</button>
-    </section>
+<!-- Hero Section -->
+<section class="min-h-screen flex flex-col justify-center items-center text-center bg-gray-800 p-6">
+    <img src="https://placehold.co/150x150" alt="Professional headshot of the developer" class="w-40 h-40 md:w-48 md:h-48 rounded-full mb-6">
+    <h1 class="text-4xl md:text-6xl font-bold mb-4">Crafting Elegant Android Experiences with Kotlin and Jetpack Compose</h1>
+    <button class="mt-4 px-6 py-3 bg-blue-500 text-white rounded-full hover:bg-blue-600 transition duration-300">View My Work</button>
+</section>
 
-    <!-- Skills Showcase -->
+<!-- Skills Showcase -->
     <section class="py-12 bg-gray-700">
         <div class="container mx-auto text-center">
             <h2 class="text-3xl font-bold mb-8">Skills</h2>
@@ -134,7 +134,7 @@
 
     <!-- Footer -->
     <footer class="py-4 bg-gray-800 text-center">
-        <p>&copy; 2023 Android Developer. All rights reserved.</p>
+        <p>&copy; 2024 Habibur Rahman. All rights reserved.</p>
     </footer>
 
 </body>
