--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <section class="min-h-screen flex flex-col justify-center items-center text-center bg-gray-800 p-6">
     <img src="https://github.com/rhabibp/rhabibp.github.io/blob/main/profile_%202.png?raw=true" alt="Professional headshot of the developer" class="w-[507.5px] h-[512px] rounded-full mb-6">
     <h1 class="text-4xl md:text-6xl font-bold mb-4">Crafting Elegant Android Experiences with Kotlin and Jetpack Compose</h1>
-    <button class="mt-4 px-6 py-3 bg-blue-500 text-white rounded-full hover:bg-blue-600 transition duration-300">View My Work</button>
+    <button onclick="window.location.href='https://github.com/rhabibp';" class="mt-4 px-6 py-3 bg-blue-500 text-white rounded-full hover:bg-blue-600 transition duration-300">View My Work</button>
 </section>
 
 
